# silvapi

./: .gitignore  Cargo.toml  Dockerfile.compat  Dockerfile.macos  Dockerfile.windows  test_stream.rs
.github/workflows/: build.yml
crates/silvapi/: Cargo.toml  build.rs
crates/silvapi-core/: Cargo.toml
crates/silvapi-core/src/: lib.rs  models.rs  models_tests.rs  path_params.rs  path_params_tests.rs
crates/silvapi-core/src/import/: curl.rs  openapi.rs  openapi_tests.rs  postman.rs
crates/silvapi/src/: http.rs  http_tests.rs  main.rs  runtime.rs  state.rs  state_tests.rs  storage.rs
crates/silvapi/src/ui/: actions.rs  request_panel.rs  response_panel.rs  top_bar.rs
crates/silvapi/src/ui/app/: mod.rs  pickers.rs  settings.rs  shortcuts.rs
crates/silvapi/src/ui/collection_panel/: folder_settings.rs  mod.rs  tree.rs
crates/silvapi/src/ui/request_panel/: auth.rs  body.rs  kv.rs  mod.rs  tests.rs  url_bar.rs
crates/silvapi/src/ui/response_panel/: body_view.rs  headers.rs  mod.rs  preview.rs  timeline.rs
patches/: gpui-windows-runtime-shaders.patch  media-build-crossbuild.rs
scripts/: build-common.sh  build-compatible-release.sh  build-macos.sh  build-release.sh  build-windows-exe.sh
src/: http.rs  main.rs  models.rs  path_params.rs  state.rs  storage.rs
src/import/: mod.rs  openapi.rs  postman.rs
src/ui/: actions.rs  app.rs  collection_panel.rs  html_preview.rs  mod.rs  request_panel.rs  response_panel.rs  top_bar.rs
themes/: ayu.json  macos-classic.json
